--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+.gitignore
+.env
 /.wwebjs_auth
 /node_modules
-.gitignore
-.env/
+/functions
+/pdf
+
+firebase.json
+firestore.indexes.json
+firestore.rules
+.firebaserc
