--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fs": "0.0.1-security",
+    "firebase-admin": "^12.1.1",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "node": "^22.0.0",
     "puppeteer": "^22.10.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
