--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "fs": "^0.0.1-security",
+    "googleapis": "^140.0.0",
     "multer": "^1.4.5-lts.1",
     "node": "^22.0.0",
     "puppeteer": "^22.10.0",
