--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase-admin": "^12.1.1",
     "fs": "^0.0.1-security",
-    "googleapis": "^140.0.0",
     "multer": "^1.4.5-lts.1",
     "node": "^22.0.0",
     "puppeteer": "^22.10.0",
